# My-GitHub-Yearbook

./: nginx.conf  readme.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: screenshots.py
backend/app/core/: config.py  database.py
backend/app/models/: user.py
backend/app/services/: github.py  yearbook.py
config/: settings.yaml
outputs/: yearbook.html
src/: analyzer.py  collector.py  main.py  report.py
web/: .env.development  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/public/: 404.html
web/src/: App.tsx  index.css  types.ts
web/src/components/: ContributionArea.tsx  ContributionGraph.tsx  HourlyChart.tsx  LanguageChart.tsx  ProfileCard.tsx  ProjectStats.tsx  RepoCard.tsx  ShareCard.tsx  StreakStats.tsx  TechStack.tsx  Timeline.tsx  VisitorMap.tsx  WeekdayChart.tsx  WordCloud.tsx
web/src/components/yearbook/: YearbookCard.tsx
web/src/hooks/: useYearbookLogic.ts
web/src/pages/: CardPage.tsx  LandingPage.tsx  YearbookPage.tsx
web/src/services/: api.ts  gistCache.ts  github.ts
web/src/utils/: analyzer.ts  fingerprint.ts
